# ndi-rs

./: .gitignore  Cargo.toml
ndi/: build.rs
ndi-examples/src/: send.rs
ndi/src/internal/: bindings_macos.rs
src/: config.rs  gui.rs  main.rs  ndi_receiver.rs
src/image_renderer/: mod.rs  texture.rs
xtask/: Cargo.toml
xtask/src/: main.rs
